# blanker_BE

./: .gitignore  README.md  TASK.md  TASK.next.md
backend/: .env.example  Dockerfile  alembic.ini  docker-compose.search.yml  docker-compose.webtoon.yml  docker-compose.yml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 20260713_0001_create_users.py  20260713_0002_create_interest_targets.py  20260713_0003_create_interest_items.py  20260713_0004_create_analysis_tables.py  20260713_0005_create_block_settings.py  20260713_0006_create_blocked_items.py  20260713_0007_allow_generated_public_ids.py  20260713_0008_create_interests.py  20260713_0009_add_interest_type.py  20260713_0010_seed_default_interests.py  20260714_0011_add_interest_id_to_interest_targets.py  20260714_0012_remove_duplicate_group_tables.py  20260714_0013_remove_seed_interests.py  20260714_0014_split_interest_catalog.py  20260714_0015_add_image_url_to_interest_items.py  20260714_0016_add_interest_target_to_blocked_items.py  20260714_0017_split_interest_genres.py  20260715_0018_add_interest_summary.py  20260715_0019_remove_all_genre.py  20260715_0020_add_interest_target_name_unique_index.py  20260715_0021_set_null_on_interest_target_delete.py
backend/app/: __init__.py  main.py
backend/app/ai/: client.py  content_classifier.py  duplicate_detector.py  pipeline.py  (+3 more)
backend/nginx/: default.conf
backend/scripts/: import_interests.py  migrate.py  seed_default_interest_types.py  start.py
backend/searxng/: settings.yml
backend/tests/: test_health.py
backend/webtoon-api/: Dockerfile
(+307 files in other folders)
